Meshes glitch on cycling Viewport Shading mode with Linked Groups and #47754

Closed
opened 2016-03-11 02:50:04 +01:00 by Bun ny · 7 comments

System Information
Operating system and graphics card
Windows 7 x64
NVIDIA GeForce GTX 580

Blender Version
Broken: 2.77 RC2 1e1118e

Meshes in Linked Groups deformed by a Proxy Object often glitch when cycling Viewport Shading. Seems to only occur when using Textured Solid shading.

Exact steps for others to reproduce the error
Reliably occurs in attached blends. ranger.blend is the Library, ranger_error.blend is the scene.

Set Viewport Shading to Wireframe with Z, Alt-A to play for a few frames, Alt-A again to pause, switch back to Solid Shading with Z and the mesh will appear distorted. Advance the playhead and it'll jump back into place.

Can also be observed when cycling between Wireframe and Solid by hitting Z while animation plays.

[Ranger ]] asset by [ http:*www.ethansnell.com/ | Enthymeme . ranger.blend ranger_error.blend ranger_error.png

**System Information** Operating system and graphics card Windows 7 x64 NVIDIA GeForce GTX 580 **Blender Version** Broken: 2.77 RC2 1e1118e Meshes in Linked Groups deformed by a Proxy Object often glitch when cycling Viewport Shading. Seems to only occur when using Textured Solid shading. **Exact steps for others to reproduce the error** Reliably occurs in attached blends. ranger.blend is the Library, ranger_error.blend is the scene. Set Viewport Shading to Wireframe with Z, Alt-A to play for a few frames, Alt-A again to pause, switch back to Solid Shading with Z and the mesh will appear distorted. Advance the playhead and it'll jump back into place. Can also be observed when cycling between Wireframe and Solid by hitting Z while animation plays. [Ranger ]] asset by [[ http:*www.ethansnell.com/ | Enthymeme ](http:*blenderartists.org/forum/showthread.php?318414-Ranger-Game-Ready-Low-Poly-Asset-(download-included!)). [ranger.blend](https://archive.blender.org/developer/F289404/ranger.blend) [ranger_error.blend](https://archive.blender.org/developer/F289406/ranger_error.blend) ![ranger_error.png](https://archive.blender.org/developer/F289402/ranger_error.png)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bunny

Added subscriber: @bunny
Author

Whoops! Disregard that trailing "and".

Whoops! Disregard that trailing "and".

Added subscriber: @mont29

Added subscriber: @mont29

Can confirm, would bet for some update issue related to proxy… Needs more investigation.

Not a regression, 2.76 shows same bug.

Can confirm, would bet for some update issue related to proxy… Needs more investigation. Not a regression, 2.76 shows same bug.

This issue was referenced by 068ee2cd98

This issue was referenced by 068ee2cd98fc987453cd50285c387c6480c6d99c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47754
No description provided.